--- a/src/app/components/home-page/home-page.component.html
+++ b/src/app/components/home-page/home-page.component.html
@@ -1,6 +1,8 @@
-<button md-button (click)="toggleMenu()">
-  <md-icon>menu</md-icon> Menu
-</button>
+<div class="flex-container">
+  <button md-button (click)="toggleMenu()">
+    <md-icon>menu</md-icon> Menu
+  </button>
+</div>
 
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo possimus, molestias, distinctio laborum quidem natus non, quae nesciunt praesentium magnam explicabo. Necessitatibus, consectetur nulla laborum quibusdam fugiat eveniet pariatur magni!</p>
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo possimus, molestias, distinctio laborum quidem natus non, quae nesciunt praesentium magnam explicabo. Necessitatibus, consectetur nulla laborum quibusdam fugiat eveniet pariatur magni!</p>
