--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <section class="app flex-container" fxLayout="column" fxLayoutAlign="start stretch">
   <md-sidenav-container fxFlex>
-    <md-sidenav mode="over" align="start" class="mat-elevation-z6" [opened]="open">
+    <md-sidenav mode="over" align="start" class="mat-elevation-z6 flex-container" [opened]="open" fxLayout="column" fxLayoutAlign="start stretch">
       <div class="navHeader">
         <h3>Menu</h3>
-        <button md-fab (click)="toggleMenu()">
+        <button md-fab (click)="toggleMenu()" color="warn">
           <md-icon>close</md-icon>
         </button>
       </div>
@@ -17,6 +17,21 @@
         <md-list-item>Websites</md-list-item>
         <md-list-item>Contact</md-list-item>
       </md-list>
+
+      <hr>
+
+      <div class="social">
+        <a href="https://twitter.com/lord_chancellor" target="_blank" rel="noopener" title="Follow me on Twitter">
+          <i class="fa fa-2x fa-twitter"></i>
+        </a>
+        <a href="https://github.com/lordchancellor" target="_blank" rel="noopener" title="View my GitHub">
+          <i class="fa fa-2x fa-github"></i>
+        </a>
+        <a href="https://www.linkedin.com/in/cdjford" target="_blank" rel="noopener" title="Connect on LinkedIn">
+          <i class="fa fa-2x fa-linkedin"></i>
+        </a>
+      </div>
+
     </md-sidenav>
 
     <mf-home-page (menuEvent)="toggleMenu()"></mf-home-page>
