--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,10 +1,18 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~@angular/material/prebuilt-themes/indigo-pink.css';
 
+$whiteText:     #ffffff;
+$darkText:      #333333;
+
+$twitter:       #55acee;
+$github:        #333333;
+$linkedin:  		#0077b5;
+
 body {
 	margin: 0;
 	padding: 0;
 	font-family: 'Open Sans', Helvetica, Arial, sans-serif;
+	font-size: 16px;
 }
 
 .app {
