--- a/src/app/components/home-page/home-page.component.html
+++ b/src/app/components/home-page/home-page.component.html
@@ -1,6 +1,4 @@
-<button md-button (click)="toggleMenu()">
-  <md-icon>menu</md-icon> Menu
-</button>
+<mf-menu-button (menuEvent)="toggleMenu()"></mf-menu-button>
 
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo possimus, molestias, distinctio laborum quidem natus non, quae nesciunt praesentium magnam explicabo. Necessitatibus, consectetur nulla laborum quibusdam fugiat eveniet pariatur magni!</p>
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo possimus, molestias, distinctio laborum quidem natus non, quae nesciunt praesentium magnam explicabo. Necessitatibus, consectetur nulla laborum quibusdam fugiat eveniet pariatur magni!</p>
