Basic home page done

--- a/src/app/components/home-page/home-page.component.html
+++ b/src/app/components/home-page/home-page.component.html
@@ -1,12 +1,14 @@
 <mf-menu-button (menuEvent)="toggleMenu()"></mf-menu-button>
 
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo possimus, molestias, distinctio laborum quidem natus non, quae nesciunt praesentium magnam explicabo. Necessitatibus, consectetur nulla laborum quibusdam fugiat eveniet pariatur magni!</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo possimus, molestias, distinctio laborum quidem natus non, quae nesciunt praesentium magnam explicabo. Necessitatibus, consectetur nulla laborum quibusdam fugiat eveniet pariatur magni!</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo possimus, molestias, distinctio laborum quidem natus non, quae nesciunt praesentium magnam explicabo. Necessitatibus, consectetur nulla laborum quibusdam fugiat eveniet pariatur magni!</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo possimus, molestias, distinctio laborum quidem natus non, quae nesciunt praesentium magnam explicabo. Necessitatibus, consectetur nulla laborum quibusdam fugiat eveniet pariatur magni!</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo possimus, molestias, distinctio laborum quidem natus non, quae nesciunt praesentium magnam explicabo. Necessitatibus, consectetur nulla laborum quibusdam fugiat eveniet pariatur magni!</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo possimus, molestias, distinctio laborum quidem natus non, quae nesciunt praesentium magnam explicabo. Necessitatibus, consectetur nulla laborum quibusdam fugiat eveniet pariatur magni!</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo possimus, molestias, distinctio laborum quidem natus non, quae nesciunt praesentium magnam explicabo. Necessitatibus, consectetur nulla laborum quibusdam fugiat eveniet pariatur magni!</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo possimus, molestias, distinctio laborum quidem natus non, quae nesciunt praesentium magnam explicabo. Necessitatibus, consectetur nulla laborum quibusdam fugiat eveniet pariatur magni!</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo possimus, molestias, distinctio laborum quidem natus non, quae nesciunt praesentium magnam explicabo. Necessitatibus, consectetur nulla laborum quibusdam fugiat eveniet pariatur magni!</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo possimus, molestias, distinctio laborum quidem natus non, quae nesciunt praesentium magnam explicabo. Necessitatibus, consectetur nulla laborum quibusdam fugiat eveniet pariatur magni!</p>
+<section>
+  <div class="welcome">
+    <h1>Hello, I'm Christopher</h1>
+
+    <h4>I'm a Software Engineer based in Southampton</h4>
+
+    <p>I specialise in building clean, stylish UIs and elegant JavaScript solutions</p>
+  </div>
+
+  <img src="./../../../assets/mister-ford.jpg" alt="Mister Ford">
+
+</section>
