--- a/src/app/components/home-page/home-page.component.scss
+++ b/src/app/components/home-page/home-page.component.scss
@@ -1,4 +1,26 @@
-.flex-container {
+section {
 	display: flex;
-	flex-flow: row-reverse nowrap;
+	flex-flow: row nowrap;
+	align-items: center;
+	justify-content: space-between;
+	padding: 20px;
+
+	.welcome {
+		h1 {
+			font-size: 3.0rem;
+		}
+
+		h4 {
+			font-size: 2.0rem;
+		}
+
+		p {
+			
+		}
+	}
+
+	img {
+		border-radius: 12px;
+		border: 5px solid #666;
+	}
 }
