--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,7 +11,7 @@ $linkedin:  		#0077b5;
 body {
 	margin: 0;
 	padding: 0;
-	font-family: 'Open Sans', Helvetica, Arial, sans-serif;
+	font-family: 'Raleway', Helvetica, Arial, sans-serif;
 	font-size: 16px;
 }
 
